# custom-widget

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/detailmodule/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/detailmodule/mplay/: IMediaPbService.aidl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: Compiler.h  Log.h  Singleton.h
app/src/main/java/com/example/detailmodule/: AboutActivity.java  MainActivity.java
app/src/main/java/com/example/detailmodule/adapter/: DetailRecycleAdapter.java  PanoramaBall.java
app/src/main/java/com/example/detailmodule/fragments/: BaseFragment.java  DetailFragment.java  PanoramaFragment.java  RedPaperFragment.java  ScanLineFragment.java
app/src/main/java/com/example/detailmodule/mplay/: MediaPbService.java
app/src/main/java/com/example/detailmodule/utils/: HttpUtils.java  IScreenChangedListener.java  MediaUtils.java  PanoramaGLUtils.java  ParamsUtil.java  ViewObserverFocusListener.java
app/src/main/java/com/example/detailmodule/views/: DetailViewPanel.java  InterceptEventView.java  LuckyView.java  PanoramaViewPanel.java  ScanLineView.java
app/src/main/res/layout/: about_layout.xml  activity_main.xml  layout_test.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/detailmodule/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
